# migasing

./: .gitignore  CMakeLists.txt  conanfile.txt
CMAKE/CONAN/: FindBZip2.cmake  FindBrotli.cmake  FindEXPAT.cmake  FindFreetype.cmake  FindGLEW.cmake  FindIconv.cmake  FindLibXml2.cmake  FindOIS.cmake  FindPNG.cmake  FindZLIB.cmake  Findglfw3.cmake  Findglm.cmake  Findglu.cmake  Findopengl_system.cmake  conan_imports_manifest.txt  conanbuildinfo.txt  conaninfo.txt  graph_info.json
SRC/core/: CMakeLists.txt  IreflectEle.hpp  cls.hpp  def.h  func.hpp  funcTraits.hpp  isCallable.hpp  module.cpp  module.hpp  system.cpp  system.hpp
SRC/main/: CMakeLists.txt  main.cpp
SRC/ui/: CMakeLists.txt  defs.h  module.cpp
